# order-query

./: Dockerfile  README.md  docker-compose.yml  entrypoint.sh  manage.py  pyproject.toml  setup.cfg
.github/workflows/: flake8.yml  test.yml
account/migrations/: 0001_initial.py
order/: models.py  tests.py
order/management/commands/: compare_performance_select_order.py
order/migrations/: 0001_initial.py  0002_order_status_alter_orderstatus_status.py  0003_order_index_by_status.py
order_query/: asgi.py  settings.py  urls.py  wsgi.py
